--- a/index.html
+++ b/index.html
@@ -6,10 +6,55 @@
   <link rel="icon" href="/favicon.png" type="image/png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title></title>
+  <script>
+    !function (f, b, e, v, n, t, s) {
+      if (f.fbq) return; n = f.fbq = function () {
+        n.callMethod ?
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      };
+      if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+      n.queue = []; t = b.createElement(e); t.async = !0;
+      t.src = v; s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s)
+    }(window, document, 'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '464152896694482');
+    fbq('track', 'PageView');
+  </script>
+  <script type="text/javascript">
+    (function (m, e, t, r, i, k, a) {
+      m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+      m[i].l = 1 * new Date();
+      for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
+      k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+    })
+      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+    ym(98948571, "init", {
+      clickmap: true,
+      trackLinks: true,
+      accurateTrackBounce: true,
+      webvisor: true
+    });
+  </script>
+
+  <meta property="og:site_name" content="https://ivitrina-nedvizhimosti.com/">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://ivitrina-nedvizhimosti.com/">
+  <meta property="og:title" content="Витрина Недвижимости">
+  <meta property="og:description" content="Номер №1 площадка для поиска недвижимости в Ташкенте">
+  <meta property="og:image" content="/favicon.png">
+
 </head>
 
 <body>
+  <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=464152896694482&ev=PageView&noscript=1" /></noscript>
   <div id="app"></div>
+  <noscript>
+    <div><img src="https://mc.yandex.ru/watch/98948571" style="position:absolute; left:-9999px;" alt="" /></div>
+  </noscript>
+  <!-- /Yandex.Metrika counter -->
   <script type="module" src="/src/main.js"></script>
 </body>
 
