--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
       if (f.fbq) return; n = f.fbq = function () {
         n.callMethod ?
           n.callMethod.apply(n, arguments) : n.queue.push(arguments)
-      };
-      if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
-      n.queue = []; t = b.createElement(e); t.async = !0;
-      t.src = v; s = b.getElementsByTagName(e)[0];
+      }
+      if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0'
+      n.queue = []; t = b.createElement(e); t.async = !0
+      t.src = v; s = b.getElementsByTagName(e)[0]
       s.parentNode.insertBefore(t, s)
     }(window, document, 'script',
-      'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '464152896694482');
+      'https://connect.facebook.net/en_US/fbevents.js')
+    fbq('init', '464152896694482')
     fbq('track', 'PageView');
   </script>
   <script type="text/javascript">
     (function (m, e, t, r, i, k, a) {
-      m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
-      m[i].l = 1 * new Date();
-      for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
+      m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) }
+      m[i].l = 1 * new Date()
+      for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return } }
       k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
     })
-      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym")
 
     ym(98948571, "init", {
       clickmap: true,
@@ -44,6 +44,7 @@
   <meta property="og:title" content="Витрина Недвижимости">
   <meta property="og:description" content="Номер №1 площадка для поиска недвижимости в Ташкенте">
   <meta property="og:image" content="/favicon.png">
+  <meta content="/favicon.png" itemprop="image">
 
 </head>
 
