--- a/index.html
+++ b/index.html
@@ -42,7 +42,15 @@
   <meta property="og:url" content="https://ivitrina-nedvizhimosti.com/">
   <meta property="og:image" content="/favicon.png">
   <meta content="/favicon.png" itemprop="image">
-
+  <meta property="og:title" content="Ипотека в Ташкенте – Доступное жилье с выгодными условиями">
+  <meta property="og:description"
+    content="Подберите удобную ипотеку в Ташкенте. Большой выбор предложений, понятные условия и помощь в оформлении. Сделайте шаг к своему дому уже сегодня!">
+  <meta name="keywords" content="квартиры в ипотеку Ташкент, ипотека в Ташкенте, оформить ипотеку в Ташкенте">
+  <meta property="og:title" content="Квартиры в Ташкенте – Аренда и покупка по лучшим ценам">
+  <meta property="og:description"
+    content="Ищете квартиру в Ташкенте? Найдите подходящее жилье для аренды или покупки. Широкий выбор, выгодные условия, удобный поиск.">
+  <meta name="keywords"
+    content="квартиры в Ташкенте, аренда квартиры, аренда квартир в Ташкенте, квартира аренда Ташкент">
 </head>
 
 <body>
