--- a/index.html
+++ b/index.html
@@ -51,16 +51,33 @@
     content="Ищете квартиру в Ташкенте? Найдите подходящее жилье для аренды или покупки. Широкий выбор, выгодные условия, удобный поиск.">
   <meta name="keywords"
     content="квартиры в Ташкенте, аренда квартиры, аренда квартир в Ташкенте, квартира аренда Ташкент">
+  <meta name="google-site-verification" content="Fbe51cpS_sF8EUTZ-t4ONyydTrIFh7M9nW6AQ4fqXt8" />
 </head>
 
 <body>
   <noscript><img height="1" width="1" style="display:none"
       src="https://www.facebook.com/tr?id=464152896694482&ev=PageView&noscript=1" /></noscript>
-  <div id="app"></div>
   <noscript>
     <div><img src="https://mc.yandex.ru/watch/98948571" style="position:absolute; left:-9999px;" alt="" /></div>
   </noscript>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T7Z5HL4B" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-T7Z5HL4B');</script>
+  <!-- End Google Tag Manager -->
   <!-- /Yandex.Metrika counter -->
+  <div id="app"></div>
+
+
   <script type="module" src="/src/main.js"></script>
 </body>
 
